# SpellWriting

./: .gitignore  README.md  pyproject.toml
SpellWriting/: abstract.py  main.py  spell.py
SpellWriting/attributes/: __init__.py  duration.txt  school.txt
SpellWriting/data/fifth_edition/: __init__.py  fifth_edition.yaml
SpellWriting/generation/: __init__.py  data.py  draw.py  geometry.py  node.py
SpellWriting/scripts/: quill.py  spells.py  test_functions.py
SpellWriting/spell/: __init__.py  data.py  notation.py
scripts/: necklaces.py  spells.py
