[project]
name = "spellwriting"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
    "rapidfuzz",
    "requests",
    "tqdm",
    "typer",
]


[tool.setuptools.package-data]
SpellWriting = ["data/**/*.yaml"]
